--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,62 +7,32 @@ services:
         restart: always
         network_mode: host
         depends_on:
-            - php5
+            - php7
         volumes:
             - ./conf/sites-enabled:/etc/nginx/conf.d
             - ./volumes/logs/nginx:/var/log/nginx
             - ~/work:/opt
         env_file: .env
-    php5:
-        build: ./images/php5
-        container_name: php5
+    php7:
+        build: images/php7.1
+        container_name: php7
         restart: always
         network_mode: host
+        ports:
+            - 9007:9000
         volumes:
-            - /private:/private
-            - ./volumes/logs/php:/var/log
             - ~/work:/opt
+            - ./volumes/logs/php:/var/log
         working_dir: /opt
         env_file: .env
 
-# php:
-#   build: images/php
-#   ports:
-#     - 9000:9000
-#     - 9001:9001
-#     - 8000:8000
-#   volumes:
-#     - ./volumes/logs/php:/var/log
-#     - ~/work:/opt
-#   working_dir: /opt
-#   env_file: .env
-
-# php7:
-#   build: images/php7
-#   ports:
-#     - 9007:9000
-#     - 9008:9001
-#   volumes:
-#     - ~/work:/opt
-#   working_dir: /opt
-#   env_file: .env
-
-# node:
-#   build: images/node
-#   volumes:
-#     - ~/work:/opt
-#   ports:
-#     - 8080:8080
-#   working_dir: /opt
-#   env_file: .env
-
-# mysql:
-#   build: images/mysql
-#   ports:
-#     - 3306:3306
-#   volumes:
-#     - ./volumes/data/mysql:/var/lib/mysql
-#   env_file: .env
+    mysql:
+        build: images/mysql
+        ports:
+            - 3306:3306
+        volumes:
+            - ./volumes/data/mysql:/var/lib/mysql
+        env_file: .env
 
 # mongo:
 #   build: images/mongo
