--- a/images/ssdb/ssdb.conf
+++ b/images/ssdb/ssdb.conf
@@ -1,51 +1,44 @@
-# ssdb-server config
-# MUST indent by TAB!
-
-# relative to path of this file, directory must exists
-work_dir = /opt
-pidfile = ./ssdb.pid
+work_dir = /data
+pidfile = /var/run/ssdb.pid
 
 server:
-	ip: 127.0.0.1
-	port: 16379
-	# bind to public ip
-	#ip: 0.0.0.0
-	# format: allow|deny: all|ip_prefix
-	# multiple allows or denys is supported
-	#deny: all
-	#allow: 127.0.0.1
-	#allow: 192.168
-	# auth password must be at least 32 characters
-	#auth: very-strong-password
+        ip: 0.0.0.0
+        port: 16379
+        # format: allow|deny: all|ip_prefix
+        # multiple allows or denys is supported
+        #deny: all
+        #allow: 127.0.0.1
+        #allow: 192.168
+        # auth password must be at least 32 characters
+        #auth: very-strong-password
 
 replication:
-	binlog: yes
-		capacity: 20000000
-	# Limit sync speed to *MB/s, -1: no limit
-	sync_speed: -1
-	slaveof:
-		# to identify a master even if it moved(ip, port changed)
-		# if set to empty or not defined, ip:port will be used.
-		#id: svc_2
-		# sync|mirror, default is sync
-		#type: sync
-		#host: localhost
-		#port: 16379
+        binlog: yes
+        # Limit sync speed to *MB/s, -1: no limit
+        sync_speed: -1
+        slaveof:
+                # to identify a master even if it moved(ip, port changed)
+                # if set to empty or not defined, ip:port will be used.
+                #id: svc_2
+                # sync|mirror, default is sync
+                #type: sync
+                #host: localhost
+                #port: 8889
 
 logger:
-	level: debug
-	output: log.txt
-	rotate:
-		size: 1000000000
+        level: stdout
+        output: log.txt
+        rotate:
+                size: 1000000000
 
 leveldb:
-	# in MB
-	cache_size: 500
-	# in KB
-	block_size: 32
-	# in MB
-	write_buffer_size: 64
-	# in MB
-	compaction_speed: 1000
-	# yes|no
-	compression: yes
+        # in MB
+        cache_size: 128
+		  # in KB
+        block_size: 16
+        # in MB
+        write_buffer_size: 64
+        # in MB/s
+        compaction_speed: 1000
+        # yes|no
+        compression: yes
