--- a/images/nginx/Dockerfile
+++ b/images/nginx/Dockerfile
@@ -2,8 +2,8 @@ FROM nginx:1.9.0
 
 COPY ./nginx.conf /etc/nginx/
 
-RUN chown -R www-data.www-data /opt
+RUN chown -R www-data.www-data /srv
 
-VOLUME ["/opt", "/var/log/nginx", "/etc/nginx/conf.d"]
+VOLUME ["/srv", "/var/log/nginx", "/etc/nginx/conf.d"]
 
 EXPOSE 80 443
