--- a/images/redis/Dockerfile
+++ b/images/redis/Dockerfile
@@ -1,3 +1,7 @@
 FROM redis:3.0
 
+COPY redis.conf /usr/local/etc/redis/redis.conf
+
 EXPOSE 6379
+
+CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
